<resources>
    <string name="app_name">Wu Jiak</string>
    <string name="loginbtn">Log In</string>
    <string name="registerbtn">Sign Up</string>
    <string name="username">Name</string>
    <string name="Phonenumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register Now</string>
    <string name="login">Log In</string>
    <string name="loginAdmin"><u>Login As Admin</u></string>
    <string name="loginUser"><u>Login As User</u></string>
    <string name="Menu">Menu</string>
    <string name="Cart">Cart</string>
    <string name="Wallet">E-Wallet</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logoutButton">Logout</string>
    <string name="language">Change Language</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="trackDelivery">Track Delivery</string>
    <string name="changelanguage">Change Language</string>
    <string name="placeorder">Place Order</string>
    <string name="finalorderheader">Please enter your Delivery Details</string>
    <string name="proceedpayment">Proceed To Payment</string>
    <string name="addtocart">Add To Cart</string>
    <string name="englishword">English</string>
    <string name="chineseword">Chinese</string>
    <string name="back">Back</string>
    <string name="trackdelivery">Track Delivery</string>
    <string name="currentorder">Current Order</string>
    <string name="pastorder">Past Order</string>
    <string name="selectlanguageheader">Select Application Language</string>
    <string name="maptracking">Map Tracking</string>
    <string name="pickupaddress">Pick Up Address</string>
    <string name="totalprice">Total Price =</string>
    <string name="trackorderbutton">Track Order</string>
    <string name="registerloginbtn">Log In</string>
    <string name="registersignupbutton">Sign Up</string>
    <string name="registerregisterbutton">Register Now</string>
    <string name="selectaddress">Select Address</string>
    <string name="foodmenuheader">Food Menu</string>
    <string name="preparingbutton">Preparing</string>
    <string name="popularfood">Popular</string>
    <string name="foodMenu">Food</string>
    <string name="drinkMenu">Drink</string>
    <string name="deliveryDetails">Please enter yout delivey details</string>
    <string name="proceedToPayment">Proceed To Payment</string>
    <string name="profile">Profile</string>
    <string name="languageCard">Language</string>
    <string name="orderCard">Order</string>
    <string name="logoutCard">Logout</string>
    <string name="questionsAnswer">Questions</string>
    <string name="userProfile">User Profile</string>
    <string name="accountInfo">Account Info</string>
    <string name="editField">Edit Field</string>
    <string name="editName">Edit Name</string>
    <string name="editPassword">Edit Password</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderDetails1">Order Details</string>
    <string name="customerInfo">Customer Info</string>
    <string name="foodOrders">Food Orders</string>
    <string name="answerFollowingQuestion">Answer the Following Question</string>
    <string name="writePhoneNumber">Please write your Phone Number</string>
    <string name="parentsMet">Where is your parents met</string>
    <string name="favouriteFood">What is your favourite food</string>
    <string name="verifyBtn">Verify</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="contactUs">Contact Us</string>
    <string name="profileCard">Profile</string>
    <string name="balance">Balance</string>
    <string name="selectReloadAmount">Select Reload Amount</string>
    <string name="driverPhone">Driver Phone</string>
    <string name="generateQrCode">Generate QR Code</string>
    <string name="enterAmountForPayment">Enter Amount for Payment</string>
    <string name="qrCodeWillAppearHere">Code will Appear Here</string>
    <string name="englishTranslator">English Languages</string>
    <string name="chineseLanguage">Chinese Language</string>
    <string name="translateBtn">Translate</string>
    <string name="to">To</string>
    <string name="translator">Translator</string>
    <string name="translatorCard">Translator</string>
    <string name="saySomething"> Say Something</string>
</resources>