<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslatorActivity">

    <TextView
        android:id="@+id/translatorHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/translator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/translator_backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/AllButton" />

    <TextView
        android:id="@+id/englishwordHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/translatorHeader"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/englishTranslator"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etOriginalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/englishwordHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="Enter Word"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/toTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOriginalText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/to"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/chinesewordHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toTitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/chineseLanguage"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvTranslateLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chinesewordHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Translation Result"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/translateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTranslateLanguage"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_button_user"
        android:text="@string/translateBtn" />

</RelativeLayout>