<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">


    <ImageView
        android:id="@+id/language_backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/AllButton" />

    <TextView
        android:id="@+id/applicationLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/selectlanguageheader"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/englishword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/applicationLanguage"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_button_user"
        android:text="@string/englishword"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/chineseword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/englishword"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_button_user"
        android:text="@string/chineseword"
        android:textColor="@color/white"
        android:textSize="25sp" />


</RelativeLayout>