<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:id="@+id/user_profile_layout">

    <Button
        android:id="@+id/languagechanger"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="@color/AllButton"
        android:text="@string/changelanguage"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/trackDelivery"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/languagechanger"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="@color/AllButton"
        android:text="@string/trackDelivery"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/trackDelivery"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="@color/AllButton"
        android:text="@string/logoutButton"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/AllButton"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:menu="@menu/bottom_navigation"/>

</RelativeLayout>